--- a/www/index.html
+++ b/www/index.html
@@ -48,19 +48,49 @@
 
         <div class="top_input">
             <input v-model="magic_word" placeholder="shared magic word" />
-            <button v-on:click="set_magic_word">Play</button>
-            <i v-if="need_new_magic_word" class="fa fa-warning"></i>
+            <button class="half" v-on:click="set_magic_word">Play</button>
+            <button class="half"  v-on:click="">Blah</button>
         </div>
+
 
         <div class="role">
             You are: ${my_role}
         </div>
-
-        <div class="board container">
+        <div class="board container" v-if="my_role === 'player_2'">
             <table>
-                <tr v-for="i in [0, 1, 2]">
-                    <td v-on:click="play(i,j)" v-for="j in [0, 1, 2]">
-                        ${board[i * 3 + j]}
+                <tr v-for="i in [0, 1, 2, 3, 4, 5, 6, 7]">
+                    <td v-on:click="play(i,j)" v-for="j in [0, 1, 2, 3, 4, 5, 6, 7]">
+                        ${player1_board[i * 8 + j]}
+                    </td>
+                </tr>
+            </table>
+        </div>
+
+        <div class="board container" v-if="my_role === 'player_1'">
+            <table>
+                <tr v-for="i in [0, 1, 2, 3, 4, 5, 6, 7]">
+                    <td v-on:click="play(i,j)" v-for="j in [0, 1, 2, 3, 4, 5, 6, 7]">
+                        ${player2_board[i * 8 + j]}
+                    </td>
+                </tr>
+            </table>
+        </div>
+
+        <div class="board2 board container" v-if="my_role === 'player_1'">
+            <table>
+                <tr v-for="i in [0, 1, 2, 3, 4, 5, 6, 7]">
+                    <td v-on:click="play(i,j)" v-for="j in [0, 1, 2, 3, 4, 5, 6, 7]">
+                        ${player1_board[i * 8 + j]}
+                    </td>
+                </tr>
+            </table>
+        </div>
+
+        <div class="board2 board container" v-if="my_role === 'player_2'">
+            <table>
+                <tr v-for="i in [0, 1, 2, 3, 4, 5, 6, 7]">
+                    <td v-on:click="play(i,j)" v-for="j in [0, 1, 2, 3, 4, 5, 6, 7]">
+                        ${player2_board[i * 8 + j]}
                     </td>
                 </tr>
             </table>
