--- a/www/index.html
+++ b/www/index.html
@@ -53,9 +53,18 @@
         </div>
 
 
-        <div class="role">
+        <div v-if="my_role !== '' "class="role">
             You are: ${my_role}
         </div>
+
+        <div v-if="intruding">
+            Magic word already taken. Please enter a new magic word.
+        </div>
+
+        <div v-if="is_other_present">
+            Other player has joined.
+        </div>
+
         <div class="board container" v-if="my_role === 'player_2'">
             <table>
                 <tr v-for="i in [0, 1, 2, 3, 4, 5, 6, 7]">
@@ -79,7 +88,7 @@
         <div class="board2 board container" v-if="my_role === 'player_1'">
             <table>
                 <tr v-for="i in [0, 1, 2, 3, 4, 5, 6, 7]">
-                    <td v-on:click="play(i,j)" v-for="j in [0, 1, 2, 3, 4, 5, 6, 7]">
+                    <td v-for="j in [0, 1, 2, 3, 4, 5, 6, 7]">
                         ${player1_board[i * 8 + j]}
                     </td>
                 </tr>
@@ -89,7 +98,7 @@
         <div class="board2 board container" v-if="my_role === 'player_2'">
             <table>
                 <tr v-for="i in [0, 1, 2, 3, 4, 5, 6, 7]">
-                    <td v-on:click="play(i,j)" v-for="j in [0, 1, 2, 3, 4, 5, 6, 7]">
+                    <td v-for="j in [0, 1, 2, 3, 4, 5, 6, 7]">
                         ${player2_board[i * 8 + j]}
                     </td>
                 </tr>
