--- a/www/index.html
+++ b/www/index.html
@@ -88,7 +88,8 @@
         <div class="board2 board container" v-if="my_role === 'player_1'">
             <table>
                 <tr v-for="i in [0, 1, 2, 3, 4, 5, 6, 7]">
-                    <td v-for="j in [0, 1, 2, 3, 4, 5, 6, 7]">
+                    <td v-bind:class="{red: is_red(8 * i + j), green: is_green(8 * i + j), aqua: is_blue(8 * i + j), white: is_white(8 * i + j)}"
+                        v-for="j in [0, 1, 2, 3, 4, 5, 6, 7]">
                         ${player1_board[i * 8 + j]}
                     </td>
                 </tr>
@@ -98,7 +99,8 @@
         <div class="board2 board container" v-if="my_role === 'player_2'">
             <table>
                 <tr v-for="i in [0, 1, 2, 3, 4, 5, 6, 7]">
-                    <td v-for="j in [0, 1, 2, 3, 4, 5, 6, 7]">
+                    <td v-bind:class="{red: is_red(8 * i + j), green: is_green(8 * i + j), aqua: is_blue(8 * i + j), white: is_white(8 * i + j)}"
+                        v-for="j in [0, 1, 2, 3, 4, 5, 6, 7]">
                         ${player2_board[i * 8 + j]}
                     </td>
                 </tr>
